--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -57,16 +57,19 @@
             </div>
             <div class="col-3 d-flex flex-row-reverse">
                 <ul class="nav nav-pills">
+                    {% if not signup %}
                     <li class="nav-item mx-1">
                         <a href="signup">
                             <buttton class="btn btn-outline-secondary btnText">Register<buttton>
                         </a>
                     </li>
+                    {% else %}
                     <li class="nav-item">
                         <a href="home">
                             <buttton class="btn btn-outline-secondary btnText">Login<buttton>
                         </a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
