--- a/templates/order.html
+++ b/templates/order.html
@@ -179,6 +179,7 @@
                             <input type="hidden" name="order" value="{{o.id}}"/>
                             <select class="form-select form-select-sm" aria-label=".form-select-sm example" name="status">
                                 <option value="Assigned">Assigned</option>
+                                <option value="Working">On Progress</option>
                                 <option value="Complete">Completed</option>
                             </select>
                             <button class="btn btn-primary btn-sm" style="margin-left:10px ;">Submit</button>
