order ma change emp ko view

--- a/templates/acceptorder.html
+++ b/templates/acceptorder.html
@@ -25,8 +25,8 @@
                         <th class="th">#</th>
                         <th class="th">Customer</th>
                         <th class="th">Order-date</th>
-                        <th class="th">Number</th>
-                        <th class="th">Email</th>
+                        <!-- <th class="th">Number</th>
+                        <th class="th">Email</th> -->
                         <th class="th">Details</th>
                         <th class="th">Action</th>
                         <style>
@@ -44,8 +44,8 @@
                         </th>
                         <td><a href="#"><label for="name" name="name">{{order.customer_measurement.customer.name}}</label></a></td>
                         <td><label for="order-date" name="order-date">{{order.orderdate}}</label></td>
-                        <td><label for="number" name="number">{{order.customer_measurement.customer.number}}</label></td>
-                        <td><label for="email" name="email">{{order.customer_measurement.customer.email}}</label></td>
+                        <!-- <td><label for="number" name="number">{{order.customer_measurement.customer.number}}</label></td>
+                        <td><label for="email" name="email">{{order.customer_measurement.customer.email}}</label></td> -->
                         <td><a href=""><label for="measurement" name="measurement">{{order.customer_measurement}}</label></a></td>
                         <td><label for="status" name="status">{{order.status}}</label></td>
                       </tr>
@@ -55,8 +55,8 @@
                         <th scope="row">{{o.customer_measurement.customer.id}}</th>
                         <td><a href="#"><label for="name" name="name">{{o.customer_measurement.customer.name}}</label></a></td>
                         <td><label for="order-date" name="order-date">{{o.orderdate}}</label></td>
-                        <td><label for="number" name="number">{{o.customer_measurement.customer.number}}</label></td>
-                        <td><label for="email" name="email">{{o.customer_measurement.customer.email}}</label></td>
+                        <!-- <td><label for="number" name="number">{{o.customer_measurement.customer.number}}</label></td>
+                        <td><label for="email" name="email">{{o.customer_measurement.customer.email}}</label></td> -->
                         <td><a href=""><label for="measurement" name="measurement">{{o.customer_measurement}}</label></a></td>
                         <td>
                             <!-- <label for="status" name="status" class="bg-danger rounded-pill p-1">{{o.status}}</label> -->
