--- a/templates/navside.html
+++ b/templates/navside.html
@@ -21,11 +21,11 @@
             <div class="sidebar-header">
                 <div class="sidebar-logo-container">
                     <div class="logo-container">
-                        <!-- <img class="logo-sidebar" src="assets/img/logo.png" /> -->
+                        <img class="logo-sidebar" src="{{m.logo}}}" />
                     </div>
                     <div class="brand-name-container">
-                        <p class="brand-name">
-                            {{vendor}}<br>
+                        <p class="brand-name" style="margin-bottom:10px ;">
+                            {{vendor}}
                         </p>
                     </div>
                 </div>
