--- a/templates/account.html
+++ b/templates/account.html
@@ -36,7 +36,7 @@
                     <th class="th">Advance</th>
                     <th class="th">Remaining</th>
                     <th class="th">Status</th>
-                    <th class="th"></th>
+                    <th class="th">Action</th>
                     <style>
                             .th{
                                 text-align: left;
