--- a/templates/employeelanding.html
+++ b/templates/employeelanding.html
@@ -77,7 +77,7 @@
     {% endif %}
 
 {% if not reg_emp%}
-    <a href='reg_emp'class="row mb-3 mx-1" style="text-decoration:none;"><button class="btn btn-success mb-1">Register</button></a>
+    <a href='reg_emp'class="row mb-3 mx-1" style="text-decoration:none;"><button class="btn btn-success mb-1">Add</button></a>
 {% endif %}
  </div>
 
