--- a/templates/signup.html
+++ b/templates/signup.html
@@ -47,7 +47,7 @@
                         <div class="col-6">
                             <h1 class="d-flex justify-content-center mb-2 headSign">Sign up your Account</h1>
                             <h4 class="d-flex justify-content-center">Organization Detail</h4>
-                            <div class="d-flex flex-column"><input type="text" name="c_name" placeholder="Organization's Name" class="form-control"  onkeydown="return /[a-z]/i.test(event.key)"  required></div>
+                            <div class="d-flex flex-column"><input type="text" name="c_name" placeholder="Organization's Name" class="form-control" required></div>
                             <div class="d-flex flex-column"><input type="text" name="c_number" placeholder=" Contact no." maxlength="10" class="form-control" oninput="this.value = 
                                 !!this.value && Math.abs(this.value) >= 0 ? Math.abs(this.value) : null" required></div>
                             <div class="d-flex flex-column"><input type="text" name="c_address" placeholder="Address" class="form-control" onkeydown="return /[a-z]/i.test(event.key)"  required></div>
@@ -57,7 +57,7 @@
                                 <input type="file" id="file-input1" name="c_image" onchange="filename()" style="display: none;" required>
                             </div>
                             <h4 class="d-flex justify-content-center mt-2">Proprietor Detail</h4>
-                            <div class="d-flex flex-column"><input type="text" name="name" placeholder=" Name" class="form-control"  onkeydown="return /[a-z]/i.test(event.key)"  required></div>
+                            <div class="d-flex flex-column"><input type="text" name="name" placeholder=" Name" class="form-control" required></div>
                             <div class="d-flex flex-column"><input type="text" name="address" placeholder="Address" class="form-control" onkeydown="return /[a-z]/i.test(event.key)"  required></div>
                             <div class="d-flex flex-column"><input type="text" name="number" placeholder="Phone number" maxlength="10" class="form-control" oninput="this.value = 
                                 !!this.value && Math.abs(this.value) >= 0 ? Math.abs(this.value) : null" required></div>
