--- a/templates/account.html
+++ b/templates/account.html
@@ -25,7 +25,7 @@
         </div>
     </form>
         <div class="shadow-lg table-container">
-            <table class="table shadow-sm table-sm mt-2">
+            <table class="table table-striped table-sm">
                 <thead class="table-dark">
                 <tr>
                     <th class="th">#</th>
