--- a/templates/employeelanding.html
+++ b/templates/employeelanding.html
@@ -6,13 +6,21 @@
        margin-left: auto;
        margin-right: auto;
    }
+   .table-container{
+        margin-top: 30px;
+        /* margin-left: 10px; */
+        margin-right: 10px;
+    }
 </style>
 <div class="container-fluid">
 {% if not reg_emp%}
-    <div class="row">
-         <div class="">
-                    <table class="table">
-                        <thead class="thead-dark">
+    <div class="">
+        <div class="d-flex justify-content-center">
+            <label for="" class="fs-3 ">List of Employee</label>
+        </div>
+         <div class="shadow-lg table-container">
+                    <table class="table table-striped table-sm">
+                        <thead class="table-dark">
                             <tr>
                                 <th class="th">S.N</th>
                                 <th class="th">Name</th>
@@ -80,16 +88,4 @@
     <a href='reg_emp'class="row mb-3 mx-1" style="text-decoration:none;"><button class="btn btn-success mb-1">Add</button></a>
 {% endif %}
  </div>
-
- <script type="text/javascript">
-
-    function PreviewImage() {
-        var oFReader = new FileReader();
-        oFReader.readAsDataURL(document.getElementById("uploadImage").files[0]);
-
-        oFReader.onload = function (oFREvent) {
-            document.getElementById("uploadPreview").src = oFREvent.target.result;
-        };
-    };
-</script>
 {%endblock%}
