--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,74 +2,162 @@
 
 {% block content%}
 <style>
-    .card{
-        border:d solid 1px #ddc9b7 ;
-        box-shadow: 4px 5px #ddc9b7;
-        /* margin-left: 12px; */
-    }
-</style>
-<div class="container-fluid ">
-    <section class="">
-        <div class="row">
-            <!-- 1 -->
-            <div class="col-4">
-            <div class="card">
-                <div class="d-flex flex-row p-3">
-                    <div class="flex-column ">
-                        <div class="card-content">
-                            <h6>No. of Orders</h6>
-                        </div>
-                        <div class="card-txt">
-                            <label for="detail">{{orders}}</label>
-                        </div>
-                    </div>
-                    <div class="flex-column">
-                        <img src="" alt="">
-                    </div>
-                </div>
-            </div>
-            </div>
-            <!-- 1 end -->
-            <!-- 2 -->
-            <div class="col-4">
-                <div class="card">
-                <div class="d-flex flex-row p-3">
-                    <div class="flex-column ">
-                        <div class="card-content">
-                            <h6>No. of Employees</h6>
-                        </div>
-                        <div class="card-txt">
-                            <label for="detail">{{employees}}</label>
-                        </div>
-                    </div>
-                    <div class="flex-column">
-                        <img src="" alt="">
-                    </div>
-                </div>
-                </div>
-            </div>
-            <!-- 2 end -->
-            <!-- 3 -->
-            <div class="col-4">
-                <div class="card">
-                <div class="d-flex flex-row p-3">
-                    <div class="flex-column ">
-                        <div class="card-content">
-                            <h6>Total Earnings</h6>
-                        </div>
-                        <div class="card-txt">
-                            <label for="detail">Rs.{{earnings}}</label>
-                        </div>
-                    </div>
-                    <div class="flex-column">
-                        <img src="" alt="">
-                    </div>
-                </div>
-                </div>
-            </div>
-            <!-- 3 end -->
+        body{
+        /* margin-top:20px; */
+        background-color: #f7f7ff;
+        }
+        .radius-10 {
+            border-radius: 10px !important;
+        }
 
-        </div>
-    </section>
+        .border-info {
+            border-left: 5px solid  #0dcaf0 !important;
+        }
+        .border-danger {
+            border-left: 5px solid  #fd3550 !important;
+        }
+        .border-success {
+            border-left: 5px solid  #15ca20 !important;
+        }
+        .border-warning {
+            border-left: 5px solid  #ffc107 !important;
+        }
+
+
+        .card {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            min-width: 0;
+            word-wrap: break-word;
+            background-color: #fff;
+            background-clip: border-box;
+            border: 0px solid rgba(0, 0, 0, 0);
+            border-radius: .25rem;
+            margin-bottom: 1.5rem;
+            box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 2px 6px 0 rgb(206 206 238 / 54%);
+        }
+        .bg-gradient-scooter {
+            background: #17ead9;
+            background: -webkit-linear-gradient( 
+        45deg
+        , #17ead9, #6078ea)!important;
+            background: linear-gradient( 
+        45deg
+        , #17ead9, #6078ea)!important;
+        }
+        .widgets-icons-2 {
+            width: 56px;
+            height: 56px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #ededed;
+            font-size: 27px;
+            border-radius: 10px;
+        }
+        .rounded-circle {
+            border-radius: 50%!important;
+        }
+        .text-white {
+            color: #fff!important;
+        }
+        .ms-auto {
+            margin-left: auto!important;
+        }
+        .bg-gradient-bloody {
+            background: #f54ea2;
+            background: -webkit-linear-gradient( 
+        45deg
+        , #f54ea2, #ff7676)!important;
+            background: linear-gradient( 
+        45deg
+        , #f54ea2, #ff7676)!important;
+        }
+
+        .bg-gradient-ohhappiness {
+            background: #00b09b;
+            background: -webkit-linear-gradient( 
+        45deg
+        , #00b09b, #96c93d)!important;
+            background: linear-gradient( 
+        45deg
+        , #00b09b, #96c93d)!important;
+        }
+
+        .bg-gradient-blooker {
+            background: #ffdf40;
+            background: -webkit-linear-gradient( 
+        45deg
+        , #ffdf40, #ff8359)!important;
+            background: linear-gradient( 
+        45deg
+        , #ffdf40, #ff8359)!important;
+        }
+</style>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+<div class="container-fluid ">
+<div class="container">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4">
+       <div class="col">
+		 <div class="card radius-10 border-start border-0 border-3 border-info">
+			<div class="card-body">
+				<div class="d-flex align-items-center">
+					<div>
+						<p class="mb-0 text-secondary">Total Orders</p>
+						<h4 class="my-1 text-info">{{orders}}</h4>
+					</div>
+					<div class="widgets-icons-2 rounded-circle bg-gradient-scooter text-white ms-auto"><i class="fa fa-shopping-cart"></i>
+					</div>
+				</div>
+			</div>
+		 </div>
+	   </div>
+	   <div class="col">
+		<div class="card radius-10 border-start border-0 border-3 border-danger">
+		   <div class="card-body">
+			   <div class="d-flex align-items-center">
+				   <div>
+					   <p class="mb-0 text-secondary">Total Revenue</p>
+					   <h4 class="my-1 text-danger">Rs.{{earnings}}</h4>
+
+				   </div>
+				   <div class="widgets-icons-2 rounded-circle bg-gradient-bloody text-white ms-auto"><i class="fa fa-dollar"></i>
+				   </div>
+			   </div>
+		   </div>
+		</div>
+	  </div>
+	  <div class="col">
+		<div class="card radius-10 border-start border-0 border-3 border-warning">
+		   <div class="card-body">
+			   <div class="d-flex align-items-center">
+				   <div>
+					   <p class="mb-0 text-secondary">Total Customers</p>
+					   <h4 class="my-1 text-warning">{{customer}}</h4>
+
+				   </div>
+				   <div class="widgets-icons-2 rounded-circle bg-gradient-blooker text-white ms-auto"><i class="fa fa-users"></i>
+				   </div>
+			   </div>
+		   </div>
+		</div>
+	  </div> 
+      <div class="col">
+		<div class="card radius-10 border-start border-0 border-3 border-success">
+		   <div class="card-body">
+			   <div class="d-flex align-items-center">
+				   <div>
+					   <p class="mb-0 text-secondary">Total Employee</p>
+					   <h4 class="my-1 text-success">{{employees}}</h4>
+				   </div>
+				   <div class="widgets-icons-2 rounded-circle bg-gradient-ohhappiness text-white ms-auto"><i class="fa fa-id-badge"></i>
+				   </div>
+			   </div>
+		   </div>
+		</div>
+	  </div>
+	</div>
+</div>
 </div>
 {% endblock%}
