--- a/templates/billing.html
+++ b/templates/billing.html
@@ -52,7 +52,7 @@
                         <tr class="tborderTop">
                             <th scop>Gross Total</th>
                             <td></td>
-                            <td><input type="text" name="grosstotal" value="0" readonly  class="borderNone gross" id="total" min="0" disabled></td>
+                            <td><input type="number" name="grosstotal" value="0" readonly  class="borderNone gross" id="total" min="0" ></td>
                         </tr>
                         <tr>
                             <th scope="row">Discount Amount</th>
@@ -68,7 +68,7 @@
                         <tr>
                             <th scope="row">Net Total</th>
                             <td></td>
-                            <td><input type="text" name="nettotal" value="0" class="borderNone " id="netTotal"  min="0" disabled></td>
+                            <td><input type="number" name="nettotal" value="0" class="borderNone " id="netTotal"  min="0" ></td>
                         </tr>
                         <tr>
                             <th scope="row">Advance</th>
@@ -99,10 +99,10 @@
                 <table class="table table-striped table-sm">
                     <div class="d-flex justify-content-end">
                         <div>
-                            <label for="Date">Date: </label><label for="dateData">{{invoice.date}}</label>
+                            <label for="Date">Date: </label><label for="dateData">{{invoice.invoice.date}}</label>
                         </div>
                         <div>
-                            <label for="Invoice_No" >Invoice No: </label><label for="Invoice_NoData">{{invoice.id}}</label>
+                            <label for="Invoice_No" >Invoice No: </label><label for="Invoice_NoData">{{invoice.invoice.id}}</label>
                         </div>
                     </div>
                     <tr class="tborderBottom">
@@ -112,7 +112,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {% for d in invoice.orderdes.all %}
+                    {% for d in invoice.invoice.orderdes.all %}
                     <tr>
                         <td scope="row">{{ forloop.counter }}</td>
                         <td><label class="borderNone">{{d.description}}</label></td>
@@ -123,11 +123,11 @@
                     <tfoot>
                         <tr class="tborderTop">
                             <th scope="row" colspan="2">Gross Total</th>
-                            <td><label class="borderNone">{{invoice.gross_total}}</label></td>
+                            <td><label class="borderNone">{{invoice.invoice.gross_total}}</label></td>
                         </tr>
                         <tr>
                             <th scope="row" colspan="2">Discount Amount</th>
-                            <td><label class="borderNone">{{invoice.discount}}</label></td>
+                            <td><label class="borderNone">{{invoice.invoice.discount}}</label></td>
                         </tr>
                         <tr>
                             <th scope="row" colspan="2">VAT</th>
@@ -135,16 +135,16 @@
                         </tr>
                         <tr>
                             <th scope="row" colspan="2">Net Total</th>
-                            <td><label class="borderNone">{{invoice.net_total}}</label></td>
+                            <td><label class="borderNone">{{invoice.invoice.net_total}}</label></td>
                         </tr>
                         <tr>
                             <th scope="row" colspan="2">Advance</th>
-                            <td><label class="borderNone">{{invoiceDetail.advance}}</label></td>
+                            <td><label class="borderNone">{{invoice.advance}}</label></td>
                         </tr>
-                        <!-- <tr>
+                        <tr>
                             <th scope="row" colspan="2">Remaining</th>
-                            <td><label class="borderNone">{{invoiceDetail.remain}}</label></td>
-                        </tr> -->
+                            <td><label class="borderNone">{{invoice.remain}}</label></td>
+                        </tr>
                     </tfoot>
                 </table>
                 <button class="btn btn-primary">Print</button>
